--- a/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj.filters
+++ b/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="AsteroidsLogicAndSpace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Asteroid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Space.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Asteroid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Space.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
