--- a/Source/Animation/Animation.vcxproj
+++ b/Source/Animation/Animation.vcxproj
@@ -83,9 +83,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AnimationPlayer.cpp" />
+    <ClCompile Include="SceneContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimationPlayer.h" />
+    <ClInclude Include="SceneContainer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
