Removed class Space and added math functions Added window to Object and code clean up Base functionality restored

--- a/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj.filters
+++ b/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Asteroid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Space.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ParticleSpace.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -29,13 +26,13 @@
     <ClInclude Include="Asteroid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Space.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ParticleSpace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mathematics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
