--- a/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj
+++ b/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj
@@ -99,6 +99,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Asteroid.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="ParticleSpace.cpp" />
   </ItemGroup>
   <ItemGroup>
