--- a/Source/Utility/Utility.vcxproj
+++ b/Source/Utility/Utility.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="Pool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Drawable.cpp" />
     <ClCompile Include="Logger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
