--- a/Source/Utility/Utility.vcxproj.filters
+++ b/Source/Utility/Utility.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Drawable.cpp">
+    <ClCompile Include="Drawable.h">
       <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
