Rename file ParticleSpace to Star, changed stars logic

--- a/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj
+++ b/Source/AsteroidsLogicAndSpace/AsteroidsLogicAndSpace.vcxproj
@@ -100,13 +100,13 @@
   <ItemGroup>
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Object.cpp" />
-    <ClCompile Include="ParticleSpace.cpp" />
+    <ClCompile Include="Star.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asteroid.h" />
     <ClInclude Include="Mathematics.h" />
     <ClInclude Include="Object.h" />
-    <ClInclude Include="ParticleSpace.h" />
+    <ClInclude Include="Star.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
